<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_apps"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_apps" />

    <item
        android:id="@+id/nav_storage"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_storage" />

    <item
        android:id="@+id/nav_battery"
        android:icon="@android:drawable/ic_lock_idle_charging"
        android:title="@string/nav_battery" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
