<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <!-- Appearance Section -->
        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.QuestMonitor.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_appearance"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Label"
                    android:layout_marginTop="@dimen/spacing_medium" />

                <RadioGroup
                    android:id="@+id/radio_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_system"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touch_target_min"
                        android:text="@string/settings_theme_system"
                        android:textSize="@dimen/text_size_body" />

                    <RadioButton
                        android:id="@+id/radio_light"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touch_target_min"
                        android:text="@string/settings_theme_light"
                        android:textSize="@dimen/text_size_body" />

                    <RadioButton
                        android:id="@+id/radio_dark"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touch_target_min"
                        android:text="@string/settings_theme_dark"
                        android:textSize="@dimen/text_size_body" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_refresh_interval"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Label"
                    android:layout_marginTop="@dimen/spacing_large" />

                <RadioGroup
                    android:id="@+id/radio_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_1s"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touch_target_min"
                        android:text="@string/settings_refresh_1s"
                        android:textSize="@dimen/text_size_body" />

                    <RadioButton
                        android:id="@+id/radio_2s"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touch_target_min"
                        android:text="@string/settings_refresh_2s"
                        android:textSize="@dimen/text_size_body" />

                    <RadioButton
                        android:id="@+id/radio_5s"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touch_target_min"
                        android:text="@string/settings_refresh_5s"
                        android:textSize="@dimen/text_size_body" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- About Section -->
        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.QuestMonitor.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_version"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Body"
                    android:layout_marginTop="@dimen/spacing_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_developer"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Label"
                    android:layout_marginTop="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_description"
                    android:textAppearance="@style/TextAppearance.QuestMonitor.Body"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/spacing_small" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
